; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_imm.c_imm_reset_pulse.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_imm.c_imm_reset_pulse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @imm_reset_pulse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imm_reset_pulse(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @w_ctr(i32 %3, i32 4)
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @w_dtr(i32 %5, i32 64)
  %7 = call i32 @udelay(i32 1)
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @w_ctr(i32 %8, i32 12)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @w_ctr(i32 %10, i32 13)
  %12 = call i32 @udelay(i32 50)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @w_ctr(i32 %13, i32 12)
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @w_ctr(i32 %15, i32 4)
  ret void
}

declare dso_local i32 @w_ctr(i32, i32) #1

declare dso_local i32 @w_dtr(i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
